# OpenPlaceRecognition

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  clip_embs.ipynb  mypy.ini  nclt_text_baseline.ipynb  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-notebook.txt  requirements.txt  sample_train.py  sample_train_text.py  setup.cfg  test.py  test_depth_estimation.py  test_train_hydra.py  text_baseline.ipynb  tfidf_pca_ebbs.ipynb  train.py
.cursor/rules/: general.mdc
.dvc/: config
configs/: config.yaml  config_default.yaml  config_io.yaml  config_is.yaml  config_itlp_text.yaml  config_nclt_text.yaml  config_so.yaml  config_text.yaml  find_parameters_multimodal.yaml  finetune_itlp_multimodal.yaml  finetune_itlp_multimodal_semantic.yaml  finetune_itlp_multimodal_semantic_with_soc_outdoor.yaml  finetune_itlp_multimodal_with_soc_outdoor.yaml  nclt_text5_cam5.yaml  test_nclt.yaml  train_multimodal.yaml  train_soc.yaml  train_unimodal.yaml
configs/dataset/: hm3d.yaml  itlp.yaml  itlp_campus.yaml  itlp_campus_text.yaml  nclt.yaml  nclt_image.yaml  nclt_multimodal.yaml  nclt_semantic.yaml  nclt_semantic_oh.yaml  nclt_text.yaml  oxford.yaml  oxford_cod.yaml  oxford_cod_oh.yaml  oxford_intensity.yaml  phystech_campus.yaml
configs/datasets/: nclt.yaml  oxford.yaml  phystech_campus.yaml  phystech_campus_text.yaml
configs/general/: chonky.yaml  cloud.yaml  image.yaml  image_only.yaml  image_semantic.yaml  image_semantic_cloud.yaml  multimodal.yaml  multimodal_chonky.yaml  nclt_1rgb_1sem_1text.yaml  nclt_2rgb.yaml  nclt_2rgb_2sem_2text.yaml  nclt_2rgb_2sem_2text_lidar.yaml  nclt_2rgb_2sem_lidar.yaml  nclt_2rgb_2text_lidar.yaml  nclt_2rgb_lidar.yaml  nclt_5rgb.yaml  nclt_5rgb_5sem_5text.yaml  oxford_2rgb.yaml  oxford_2rgb_2sem_lidar.yaml  oxford_2rgb_lidar.yaml  oxford_4rgb.yaml  semantic_only.yaml
configs/loss/: batch_hard_contrastive.yaml  batch_hard_triplet_margin.yaml  triplet_margin.yaml  triplet_margin_cloud.yaml  triplet_margin_image.yaml  triplet_margin_image_cloud_sem_fusion.yaml  triplet_margin_image_cloud_sem_text_fusion.yaml  triplet_margin_image_cloud_text_fusion.yaml  triplet_margin_io.yaml  triplet_margin_is.yaml  triplet_margin_is_19.yaml  triplet_margin_is_28.yaml  triplet_margin_is_37.yaml  triplet_margin_is_55.yaml  triplet_margin_is_64.yaml  triplet_margin_is_73.yaml  triplet_margin_is_91.yaml  triplet_margin_isc.yaml  triplet_margin_multimodal.yaml  triplet_margin_so.yaml
configs/losses/: triplet_margin.yaml  triplet_margin_text.yaml
configs/miner/: batch_hard_triplet_miner.yaml
configs/model/: itlp_text_model.yaml  minkloc3d.yaml  minkloc3dv2.yaml  minkloc_chonky.yaml  minkloc_image_only.yaml  minkloc_multimodal.yaml  minkloc_multimodal_chonky_cloud.yaml  minkloc_multimodal_is.yaml  minkloc_multimodal_is_oh.yaml  minkloc_multimodal_isc.yaml  minkloc_multimodal_isc_oh.yaml  minkloc_multimodal_self_att.yaml  minkloc_semantic_only.yaml  minkloc_semantic_only_oh.yaml  mssplace_2rgb_2sem_2text.yaml  mssplace_2rgb_2sem_lidar.yaml  mssplace_2rgb_2sem_lidar_text.yaml  mssplace_2rgb_lidar_text.yaml  multimodal_2rgb_lidar.yaml  nclt_multitext_model.yaml  resnet18_fpn_image.yaml  resnet18_fpn_image_128.yaml  resnet18_fpn_multiimage.yaml  resnet18_fpn_multiimage_add.yaml  resnet18_fpn_multiimage_add_128.yaml  resnet18_fpn_multiimage_concat_128.yaml  resnet18_fpn_multiimage_crossatt_add.yaml  resnet18_fpn_multiimage_crossatt_add_128.yaml  resnet18_fpn_multiimage_crossatt_concat.yaml  resnet18_fpn_multiimage_crossatt_concat_128.yaml  resnet18_fpn_multiimage_crossatt_single.yaml  resnet18_fpn_multiimage_crossatt_single_128.yaml  resnet18_fpn_multiimage_mlp_fulldim.yaml  resnet18_fpn_multiimage_mlp_fulldim_128.yaml  resnet18_fpn_multiimage_mlp_halfdim.yaml  resnet18_fpn_multiimage_mlp_halfdim_128.yaml  svtnet.yaml
configs/optimizer/: adam.yaml  adamw.yaml
configs/sampler/: batch_sampler.yaml
configs/scheduler/: multi_step.yaml  multi_step_cloud.yaml
docker/: Dockerfile.base  Dockerfile.cuda  Dockerfile.devel  Dockerfile.jetson-base  Dockerfile.jetson-devel  Dockerfile.toposlam  README.md  build.sh  build_base.sh  build_devel.sh  build_jetson_base.sh  build_jetson_devel.sh  build_toposlam.sh  into.sh  start.sh  start_jetson.sh  start_toposlam.sh  start_with_xhost.sh
docker/torch_tensorrt_workspace/: WORKSPACE.jp51
docs/: modules.md  requirements.txt
docs/source/: conf.py  index.rst  itlp_dataset.rst
notebooks/: aruco_pipeline.ipynb  build_database.ipynb  clip_embs.ipynb  dataset_extraction-Copy1.ipynb  dataset_extraction.ipynb  demo_datasets.ipynb  demo_itlp_dataset.ipynb  demo_losses.ipynb  demo_models.ipynb  demo_pipelines.ipynb  itlp_text_baseline.ipynb  localization_with_dynamic_objects.ipynb  mrpt_sandbox.ipynb  nclt_text_baseline.ipynb  prepare_dataset-Copy1.ipynb  prepare_dataset-Copy2.ipynb  prepare_dataset-Copy3.ipynb  prepare_dataset-Copy4.ipynb  prepare_dataset.ipynb  test_depth_reconstruction.ipynb  test_icp.ipynb  test_itlp_with_pipelines.ipynb  test_itlp_with_soc.ipynb  test_place_recognition_in_toposlam.ipynb  test_scan_matching.ipynb  test_semseg_multimodal_pr.ipynb  test_seq_poincloud_reg.ipynb  test_soc_multimodal.ipynb  test_soc_only.ipynb  test_update_pointcloud_reg_pipe.ipynb  text_descr_EDA.ipynb  text_labels_pipeline.ipynb  tfidf_pca_embs.ipynb  topological_pipeline.ipynb  tutorial_inference_index.ipynb  tutorial_inference_localization_pipeline.ipynb  tutorial_inference_place_recognition_pipeline.ipynb  utils.py  Без названия.ipynb
notebooks/finetune_itlp/: finetune_itlp_multimodal.ipynb  finetune_itlp_multimodal_semantic.ipynb  finetune_itlp_multimodal_semantic_with_soc_outdoor.ipynb  finetune_itlp_multimodal_with_soc_outdoor.ipynb
notebooks/test_cross_season/: 01_PlaceRecognitionPipeline.ipynb  (+8 more)
opr/: const.py  testing.py  training.py  utils.py
opr/datasets/: __init__.py  (+8 more)
scripts/: build_indexes.py  test.py  test_boq.py
tests/: README.md  __init__.py  conftest.py  test_const.py  test_imports.py  test_optional_deps.py  test_utils.py  utils.py
(+348 files in other folders)
