[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opr"
version = "0.2.1"
description = "Place Recognition library based on Python and PyTorch framework."
authors = [
    {name = "Alexander Melekhin", email = "amelekhin96@gmail.com"},
    {name = "Vitalyy Bezuglyj"},
    {name = "Ilya Petryashin"},
    {name = "Sergey Linok"},
    {name = "Kirill Muravyev"},
    {name = "Dmitry Yudin"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "albumentations",
    "hydra-core>=1.2",
    "kaleido",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "plotly>=5.14.1",
    "pytorch_metric_learning",
    "requests>=2.31.0",
    "scipy",
    "tqdm",
    "wandb",
    "torchshow @ git+https://github.com/xwying/torchshow.git@master"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-docstrings",
    "pep8-naming",
    "flake8-black",
    "flake8-isort",
    "flake8-annotations",
    "flake8-bandit",
    "darglint",
    "isort",
    "pytest",
    "pre-commit",
    "pygls",
    "bandit",
]
notebook = [
    "ipykernel",
    "ipywidgets>=7.6",
    "jupyterlab>=3",
    "jupyter-dash>=0.4.2",
    "notebook>=5.3",
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"


[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["third_party", ".git", "venv"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not slow and not gpu'"
markers = [
    "unit: Fast isolated component tests (< 1 second)",
    "integration: Cross-component interaction tests (1-10 seconds)",
    "e2e: End-to-end system tests (> 10 seconds)",
    "performance: Performance benchmarking tests",
    "gpu: Tests requiring GPU resources",
    "slow: Tests taking significant time (> 10 seconds)",
    "minkowski: Tests requiring MinkowskiEngine",
    "model: Tests for model implementations",
    "dataset: Tests for dataset loading and preprocessing",
    "metrics: Tests for evaluation metrics",
]
