[metadata]
name = opr
version = attr: opr.__version__

[options]
zip_safe = False
include_package_data = True
packages = opr
install_requires =
    albumentations
    hydra-core
    numpy
    opencv-python
    pandas
    pytorch_metric_learning
    scipy
    tqdm
    wandb

[options.extras_require]
dev =
    black
    flake8
    flake8-bugbear
    flake8-docstrings
    pep8-naming
    mypy
    pytest
    pre-commit
notebook =
    matplotlib
    ipykernel
    ipywidgets

[flake8]
max-line-length = 110
exclude = .git, venv, tests, __pycache__, __init__.py
docstring-convention = google
extend-select = B950
extend-ignore = E203, E501
