[metadata]
name = opr
version = attr: opr.__version__

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = opr
install_requires =
    albumentations
    hydra-core>=1.2
    kaleido
    matplotlib
    numpy
    opencv-python
    pandas
    plotly>=5.14.1
    pytorch_metric_learning
    requests>=2.31.0
    scipy
    tqdm
    wandb

[options.extras_require]
dev =
    black
    flake8
    flake8-bugbear
    flake8-docstrings
    pep8-naming
    mypy
    pytest
    pre-commit
notebook =
    ipykernel
    ipywidgets>=7.6
    jupyterlab>=3
    jupyter-dash>=0.4.2
    notebook>=5.3

[flake8]
max-line-length = 110
exclude = .git, venv, tests, __pycache__, __init__.py
docstring-convention = google
extend-select = B950
extend-ignore = E203, E501
